--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,6 +129,6 @@
         <div class="notifications" id="notifications"></div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </body>
 </html>
