Fix infinite loading: correct backend URL and add timeouts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,7 +138,7 @@
             const content = document.getElementById('content');
             if (loading) loading.style.display = 'none';
             if (content) content.style.display = 'block';
-        }, 100);
+        }, 3000); // Увеличили до 3 секунд для ожидания сети
     </script>
 </body>
 </html>
