Fix loading: show content immediately, load data in background

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -131,14 +131,12 @@
 
     <script src="app.js"></script>
     <script>
-        // Простая инициализация после загрузки скрипта
-        setTimeout(() => {
-            console.log('🚀 Принудительный запуск...');
-            const loading = document.getElementById('loading');
-            const content = document.getElementById('content');
-            if (loading) loading.style.display = 'none';
-            if (content) content.style.display = 'block';
-        }, 3000); // Увеличили до 3 секунд для ожидания сети
+        // Немедленно показываем контент
+        console.log('🚀 Немедленный запуск...');
+        const loading = document.getElementById('loading');
+        const content = document.getElementById('content');
+        if (loading) loading.style.display = 'none';
+        if (content) content.style.display = 'block';
     </script>
 </body>
 </html>
