--- a/frontend/index.html
+++ b/frontend/index.html
@@ -140,7 +140,67 @@
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
                 </button>
+                <button class="nav-item" id="moderator-tab" data-tab="moderator" style="display: none;">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Moderator</span>
+                </button>
             </nav>
+        </div>
+
+        <!-- Модераторская панель -->
+        <div class="tab-content" id="moderator-tab" style="display: none;">
+            <div class="moderator-content">
+                <h2>🛡️ Moderator Panel</h2>
+                
+                <!-- Статистика -->
+                <div class="mod-stats">
+                    <h3>📊 Statistics</h3>
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-number" id="total-ads">0</div>
+                            <div class="stat-label">Total Ads</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="pending-ads">0</div>
+                            <div class="stat-label">Pending</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="active-ads">0</div>
+                            <div class="stat-label">Active</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="total-reports">0</div>
+                            <div class="stat-label">Reports</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Объявления на модерации -->
+                <div class="mod-section">
+                    <h3>📋 Pending Ads</h3>
+                    <div class="mod-controls">
+                        <button class="btn-secondary" onclick="refreshPendingAds()">
+                            <i class="fas fa-sync"></i> Refresh
+                        </button>
+                    </div>
+                    <div class="pending-ads-list" id="pending-ads-list">
+                        <div class="loading-placeholder">Loading pending ads...</div>
+                    </div>
+                </div>
+
+                <!-- Жалобы -->
+                <div class="mod-section">
+                    <h3>🚨 Reports</h3>
+                    <div class="mod-controls">
+                        <button class="btn-secondary" onclick="refreshReports()">
+                            <i class="fas fa-sync"></i> Refresh
+                        </button>
+                    </div>
+                    <div class="reports-list" id="reports-list">
+                        <div class="loading-placeholder">Loading reports...</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Модальное окно объявления -->
