--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -2,11 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lavka26 - Маркетплейс в Telegram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <title>Lavka26 - Объявления</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div id="app">
@@ -18,27 +20,27 @@
 
         <!-- Основной контент -->
         <div class="content" id="content">
-            <!-- Шапка с поиском -->
-            <header class="header">
-                <div class="header-top">
-                    <div class="logo">
-                        <i class="fas fa-store"></i>
-                        <span>Lavka26</span>
-                    </div>
-                    <div class="header-actions">
-                        <button class="icon-btn" onclick="openNotifications()">
-                            <i class="fas fa-bell"></i>
-                            <span class="badge" id="notification-badge">0</span>
-                        </button>
-                        <button class="icon-btn" onclick="openMessages()">
-                            <i class="fas fa-envelope"></i>
-                            <span class="badge" id="message-badge">0</span>
-                        </button>
-                        <button class="icon-btn" onclick="openProfile()">
-                            <i class="fas fa-user"></i>
-                        </button>
-                    </div>
+            <!-- Шапка с поиском <!-- Шапка в стиле Авито -->
+        <header class="header">
+            <div class="header-top">
+                <div class="logo">
+                    <i class="fas fa-store"></i>
+                    <span>Lavka26</span>
                 </div>
+                <div class="header-actions">
+                    <button class="icon-btn" onclick="openNotifications()">
+                        <i class="fas fa-bell"></i>
+                        <span class="badge" id="notification-badge" style="display: none;">0</span>
+                    </button>
+                    <button class="icon-btn" onclick="openMessages()">
+                        <i class="fas fa-comment"></i>
+                        <span class="badge" id="message-badge" style="display: none;">0</span>
+                    </button>
+                    <button class="icon-btn" onclick="openProfile()">
+                        <i class="fas fa-user"></i>
+                    </button>
+                </div>
+            </div>
                 
                 <!-- Поисковая строка -->
                 <div class="search-container">
