--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,37 +120,33 @@
                 </button>
             </main>
 
-            <!-- Нижняя навигация -->
+            <!-- Нижняя навигация в стиле Авито -->
             <nav class="bottom-nav">
                 <button class="nav-item active" data-tab="feed">
                     <i class="fas fa-home"></i>
                     <span>Главная</span>
                 </button>
-                <button class="nav-item" data-tab="search">
-                    <i class="fas fa-search"></i>
-                    <span>Поиск</span>
-                </button>
                 <button class="nav-item" data-tab="favorites">
                     <i class="fas fa-heart"></i>
                     <span>Избранное</span>
+                </button>
+                <button class="nav-item" data-tab="my-ads">
+                    <i class="fas fa-ad"></i>
+                    <span>Мои</span>
                 </button>
                 <button class="nav-item" data-tab="messages">
                     <i class="fas fa-comment"></i>
                     <span>Сообщения</span>
                 </button>
-                <button class="nav-item" data-tab="my-ads">
-                    <i class="fas fa-list-alt"></i>
-                    <span>Мои объявления</span>
-                </button>
                 <button class="nav-item" data-tab="profile">
                     <i class="fas fa-user"></i>
                     <span>Профиль</span>
                 </button>
-                <button class="nav-item" id="moderator-tab" data-tab="moderator" style="display: none;">
-                    <i class="fas fa-shield-alt"></i>
-                    <span>Модератор</span>
-                </button>
             </nav>
+            <button class="nav-item" id="moderator-tab" data-tab="moderator" style="display: none;">
+                <i class="fas fa-shield-alt"></i>
+                <span>Модератор</span>
+            </button>
         </div>
 
         <!-- Модераторская панель -->
