--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,9 @@
                     <i class="fas fa-store"></i>
                     <span>Lavka26</span>
                 </div>
+                <div class="user-info">
+                    <span id="user-name-display">Гость</span>
+                </div>
                 <div class="header-actions">
                     <button class="icon-btn" onclick="openNotifications()">
                         <i class="fas fa-bell"></i>
